disable autoscrolling to item in sidebar to prevent jumping around

--- a/public/stylesheet/default.scss
+++ b/public/stylesheet/default.scss
@@ -113,7 +113,7 @@ h1 {
     }
   }
   ul {
-    padding: 48px 0 0;
+    padding: 50px 0 0;
     margin: -2px 0;
     color: $CLOUDS;
     li {
